--- a/Learning-Log/src/app/components/controls/form/text-field/text-field.component.html
+++ b/Learning-Log/src/app/components/controls/form/text-field/text-field.component.html
@@ -1,1 +1,4 @@
-<p>text-field works!</p>
+<div class="mb-3">
+    <label [htmlFor]="id" class="form-label">{{label}}</label>
+    <input [type]="type" class="form-control" [id]="id" [placeholder]="placeholder">
+  </div>
